# stm32h7-ethernet

./: CHANGELOG.md  Cargo.toml  README.md
examples/: nucleo-h743zi2.rs  stm32h747i-disco-rtic.rs  stm32h747i-disco.rs
src/: ethernet.rs  lan8742a.rs  lib.rs
